fixes mobile z-index issue

--- a/sass/routes/_work-show.scss
+++ b/sass/routes/_work-show.scss
@@ -1,4 +1,5 @@
 #work-show {
+  -webkit-transform: translate3d(0, 0, 0);
   p4-medium-up {
     @media #{$medium-up} {
       padding: 4rem;
